--- a/musicstore/app/views/layouts/application.html.erb
+++ b/musicstore/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
       <li><%= link_to "Orders", pages_orders_path %></li>
       <li><%= link_to "Inventory", pages_inventory_path %></li>
 	  <li><%= link_to "Reports", pages_reports_path %></li>
+	   <% if user_signed_in? %>
 	  <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+	  <%end%>
     </ul>
    </div>
 
@@ -41,16 +43,21 @@
   <body>
   <div class="wrapper">
   
+ 
   <div class="content">
+	 <% if user_signed_in? %>
     <div class="row">
       <div class="col-xs-6">
         <h1><%= link_to "Browse", pages_inventory_path %></h1>
       </div>
+	  
       <div class="col-xs-6 text-right">
         <h1 class="cart-text"><%= render 'layouts/cart_text' %></h1>
       </div>
     </div>
+	
     <hr>
+	<%end%>
     <%= yield %>
 	
   </div>
