Added gem hairtrigger, changed pages to include new attribute for products, added new stock_level attribute

--- a/musicstore/app/views/pages/inventory.html.erb
+++ b/musicstore/app/views/pages/inventory.html.erb
@@ -15,6 +15,7 @@
       <th>Brand</th>
       <th>Price</th>
       <th>Stock</th>
+      <th>Stock Level</th>
     </tr>
   </thead>
 
@@ -26,6 +27,7 @@
         <td><%= product.brand %></td>
         <td><%= product.price %></td>
         <td><%= product.stock %></td>
+	<td><%= product.stock_level %></td>
       </tr>
     <% end %>
   </tbody>
