--- a/musicstore/app/views/products/index.html.erb
+++ b/musicstore/app/views/products/index.html.erb
@@ -24,6 +24,7 @@
       <th>Brand</th>
       <th>Price</th>
       <th>Stock</th>
+      <th>Stock Level</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -35,6 +36,7 @@
         <td><%= product.brand %></td>
         <td><%= product.price %></td>
         <td><%= product.stock %></td>
+	<td><%= product.stock_level %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
