--- a/musicstore/app/views/products/show.html.erb
+++ b/musicstore/app/views/products/show.html.erb
@@ -19,6 +19,10 @@
   <strong>Stock:</strong>
   <%= @product.stock %>
 </p>
+<p>
+  <strong>Stock Level:</strong>
+  <%= @product.stock %>
+</p>  
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
