--- a/musicstore/app/views/pages/home.html.erb
+++ b/musicstore/app/views/pages/home.html.erb
@@ -1,2 +1,21 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6">
+      <h1>Welcome to Don't Fret Music!</h1>
+<p>Dont't Fret is the world’s largest retailer of guitars, 
+amplifiers, drums, keyboards, recording, live sound, DJ, and 
+lighting equipment, with more than 260 stores across the U.S. 2014 marks the 
+milestone 50th anniversary of the Dont't Fret Brand as we continue to help 
+people make music from coast to coast. In addition, the Music & Arts division 
+operates more than 120 stores specializing in band & orchestral instruments for sale 
+and rental, serving teachers, band directors, college professors, and students since 1952. 
+With an unrivaled in-store experience and passionate commitment to making gear easy-to-buy, 
+Dont't Fret is all about enabling musicians and non-musicians alike to experience the 
+almost indescribable joy that comes from playing an instrument. All we sell is the greatest feeling on earth.</p>
+   </div>
+    
+    <div class="col-md-4">
+		
+	  </div>
+    </div>
+	</div>
