--- a/musicstore/app/views/products/index.html.erb
+++ b/musicstore/app/views/products/index.html.erb
@@ -6,43 +6,15 @@
 <% end %></br>
 
 
-<h3 class="text-center">Products for Sale</h3>
+<h3 class="text-center">Products</h3>
 
 <div class="row">
-  <div class="col-xs-6 col-xs-offset-3">
-    <% @products.each do |product| %>
+  <div class="col-xs-12">
+    <% @product.each do |product| %>
       <%= render "product_row", product: product, order_item: @order_item %>
     <% end %>
   </div>
 </div>
 
 
-<table class = 'table'>
-  <thead>
-    <tr>
-      <th>Product type</th>
-      <th>Brand</th>
-      <th>Price</th>
-      <th>Stock</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @product.each do |product| %>
-      <tr>
-        <td><%= product.product_type %></td>
-        <td><%= product.brand %></td>
-        <td><%= product.price %></td>
-        <td><%= product.stock %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_product_path %>
