--- a/musicstore/app/views/layouts/application.html.erb
+++ b/musicstore/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
       <li><%= link_to "Browse", products_path %></li>
 	  <% if current_user.superadmin_role? %>
 	  <li><%= link_to "Reports", pages_reports_path %></li>
+    <li><%= link_to "Admin", "/admin" %></li>
 	  <% end %>
 	   
 	  <li><%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
