--- a/musicstore/app/views/orders/show.html.erb
+++ b/musicstore/app/views/orders/show.html.erb
@@ -1,18 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Transaction:</strong>
-  <%= @order.order %>
+  <strong>ID:</strong>
+  <%= @order.id %>
 </p>
 
 <p>
-  <strong>Transaction type:</strong>
-  <%= @order.transaction_type %>
-</p>
-
-<p>
-  <strong>Date time:</strong>
-  <%= @order.date_time %>
+  <strong>Total:</strong>
+  <%= @order.subtotal %>
 </p>
 
 <p>
