--- a/musicstore/app/views/layouts/application.html.erb
+++ b/musicstore/app/views/layouts/application.html.erb
@@ -26,10 +26,16 @@
     <ul class="nav navbar-nav navbar-left">
 	  <li class="logo-img"><%= image_tag("logo.png", :size => "55x55" ) %></li>
 	  <% if user_signed_in? %>
+    <% if !current_user.superadmin_role? %>
 	  <li><%= link_to "Home", pages_home_path %></li>
+    <li><%= link_to "Browse", products_path %></li>
       <li><%= link_to "Orders", pages_orders_path %></li>
-      <li><%= link_to "Browse", products_path %></li>
+      
+    <% end %>
 	  <% if current_user.superadmin_role? %>
+    <li><%= link_to "Home", pages_home_path %></li>
+    <li><%= link_to "Products", products_path %></li>
+    <li><%= link_to "Orders", orders_path %></li>
 	  <li><%= link_to "Reports", pages_reports_path %></li>
     <li><%= link_to "Admin", "/admin" %></li>
 	  <% end %>
