--- a/musicstore/app/views/pages/graphs.html.erb
+++ b/musicstore/app/views/pages/graphs.html.erb
@@ -7,19 +7,18 @@
     
 </style>
 
-
+<h2 style="float: left">Orders</h2>
 <div class="jumbotron col-10 offset-1">
     <div class="row col-12">
     </div>
     <br>
     <div class="row">
-        <div class="col-3" style="height:400px; width:850px;">
-            <canvas id="ordersPerMonth" width="850" height="400"></canvas>
+        <div class="col-3" style="height:300px; width:850px;">
+            <canvas id="ordersPerMonth" width="850" height="300"></canvas>
         </div>
 
 
     <div class="row col-12">
-        <%= link_to "Back", "/pages/home", :class=>"btn col-2 offset-10"%>
     </div>
 </div>
 
@@ -38,7 +37,7 @@ var chart = new Chart(ctx, {
             label: "Orders",
             backgroundColor: 'rgb(255, 99, 132)',
             borderColor: 'rgb(255, 99, 132)',
-            data: nums
+            data: [1, 2, 4, 6, 7, 12, 4, 6, 6, 12, 4, 2]
         }]
     },
 
