styling, update controllers and reports, home, forms

--- a/musicstore/app/assets/stylesheets/application.scss
+++ b/musicstore/app/assets/stylesheets/application.scss
@@ -22,8 +22,8 @@ html {
 
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif; 
-  background-image: asset_url("black.jpg");
-  
+  background-image: asset_url("guitar-background.jpg");
+  background-size: cover;
 
 	
   }
