--- a/musicstore/app/views/orders/_form.html.erb
+++ b/musicstore/app/views/orders/_form.html.erb
@@ -16,7 +16,6 @@
     <%= form.text_field :id, id: :order_id %>
   </div>
 
-
   <div class="field">
     <%= form.label :subtotal %>
     <%= form.text_field :subtotal, id: :order_subtotal %>
@@ -40,6 +39,16 @@
   <div class="field">
     <%= form.label :order_status_id %>
     <%= form.text_field :order_status_id, id: :order_order_status_id %>
+  </div>
+
+  <div class="field">
+    <%= form.label :created_at %>
+    <%= form.date_field :created_at, id: :order_created_at %>
+  </div>
+
+  <div class="field">
+    <%= form.label :updated_at %>
+    <%= form.date_field :updated_at, id: :order_updated_at %>
   </div>
 
   <div class="field">
