--- a/musicstore/app/views/order_items/create.js.erb
+++ b/musicstore/app/views/order_items/create.js.erb
@@ -1,5 +1,5 @@
 <% if @order.errors.any? || @order_item.errors.any? %>
-alert("not valid.")
+alert("Product added to cart")
 <% else %>
   $(".cart-text").html("<%= escape_javascript(render 'layouts/cart_text') %>")
 <% end %>
