--- a/musicstore/app/views/products/_product_row.html.erb
+++ b/musicstore/app/views/products/_product_row.html.erb
@@ -7,10 +7,10 @@
     <div class="col-md-4">
 
       <%= form_for order_item, remote: true do |f| %>
-      <p class="text-right">Unit Price: <span style="color: green"><%= number_to_currency product.price %></span></p>
+      <p class="text-right">Unit Price: <span id="price" style="color: green"><%= number_to_currency product.price %></span></p>
         <div class="input-group">
           <%= f.number_field :quantity, value: 1, class: "form-control", min: 1 %>
-          <div class="input-group-btn">
+          <div class="input-group-btn" id="btnsubmit">
             <%= f.hidden_field :product_id, value: product.id %>
             <%= f.submit "Add to Cart", class: "btn btn-primary" %>
           </div>
